# fake-news-detection

./: README.md  main.py  pyproject.toml
data/: stream_generator.py
data/static/english/: x.ipynb
data/static/english_2/: x.ipynb
data/static/german/: x.ipynb
data/streams/: analysis.ipynb
static_approach/: main.py  x.ipynb
streaming_approach/: embeddings.parquet  generate_embeddings.py  stream_process.py  x.ipynb
